--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,57 +1,37 @@
-name: Java CI with Gradle
+name: Build and Release
 
 on:
   push:
-    branches: [ "main" ]
-
-concurrency:
-  group: "latest"
-  cancel-in-progress: true
+    tags:
+      - "v*"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'zulu'
-          java-package: 'jdk'
+          java-version: "21"
+          distribution: "temurin"
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew shadowJar --no-daemon
 
-      # Build fat JAR with Shadow plugin
-      - name: Build fat JAR
-        run: ./gradlew shadowJar
-
-      - name: Remove *-sources.jar
-        run: rm ./build/libs/*-sources.jar || true
-
-      # Extract version (vX.X or vX.X.X) from commit message
-      - name: Extract version from commit message
-        id: get_version
+      - name: Rename jar file
         run: |
-          msg=$(git log -1 --pretty=%B)
-          if [[ "$msg" =~ (v[0-9]+\.[0-9]+(\.[0-9]+)?) ]]; then
-            echo "version=${BASH_REMATCH[1]}" >> $GITHUB_ENV
-            echo "Found version: ${BASH_REMATCH[1]}"
-          else
-            echo "version=latest" >> $GITHUB_ENV
-            echo "No version found, defaulting to 'latest'"
-          fi
+          cd build/libs
+          for f in *-build.jar; do
+            mv "$f" "${f/-build/}.jar"
+          done
 
-      # Create GitHub Release (versioned or latest)
-      - name: Release
-        uses: marvinpinto/action-automatic-releases@latest
+      - name: Upload Release
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ env.version }}
-          prerelease: false
-          title: "Release ${{ env.version }}"
-          files: |
-            ./build/libs/*-all.jar
+          name: "Latest Release"
+          tag_name: ${{ github.ref_name }}
+          files: build/libs/*.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
