--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,16 @@ on:
   push:
     branches: [ "main" ]
 
+concurrency:
+  group: "latest"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # required to create/update releases
+
     steps:
       - uses: actions/checkout@v4
 
@@ -28,12 +35,14 @@ jobs:
           for f in *-build.jar; do
             mv "$f" "${f/-build/}.jar"
           done
+          ls -lh
 
       - name: Upload Release
         uses: softprops/action-gh-release@v2
         with:
           name: "Latest Release"
-          tag_name: ${{ github.ref_name }}
+          tag_name: "latest"
           files: build/libs/*.jar
+          fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
